--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,57 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+*{
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  width: 100%;
+  height: 100vh;
+  font-family: 'Open Sans', sans-serif;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav{
+  padding: 0 50px;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.flex{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+.navbar-one{
+  background-color: rgb(106, 0, 50);
+  color: white;
+  height: 60px;
+  cursor: pointer;
+  /* position: fixed;
+  left: 0;
+  right: 0; */
 }
 
-.read-the-docs {
-  color: #888;
+.center{
+   margin-left: 40%;
+}
+
+.navbar-second{
+  background-color: wheat;
+  height: 60px;
+}
+
+.navbar-second li{
+  list-style: none;
+}
+
+.navbar-second li a{
+  text-decoration: none;
+  text-transform: capitalize;
+  font-size: 16px;
+  margin-left: 38px;
+  color: black;
+  font-weight: 400;
+
 }
