--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body{
 
 .navbar-one{
   background-color: rgb(106, 0, 50);
-  color: white;
+  color: #fff;
   height: 60px;
   cursor: pointer;
   /* position: fixed;
@@ -34,7 +34,23 @@ body{
 }
 
 .center{
-   margin-left: 40%;
+   margin-left: 33.8%;
+}
+
+.lit{
+  margin: 2px;
+}
+
+.btn{
+  padding: 10px 30px;
+  background: transparent;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  font-weight: 300;
+  cursor: pointer;
+  margin-left: 20px;
+  
 }
 
 .navbar-second{
@@ -42,16 +58,29 @@ body{
   height: 60px;
 }
 
+.logo img{
+  position: absolute;
+  width: 5%;
+  margin-left: 1.8%;
+  margin-top: -22px;
+  
+}
+
 .navbar-second li{
   list-style: none;
+}
+
+.search{
+  width: 60px;
+  font-size: 25px;
 }
 
 .navbar-second li a{
   text-decoration: none;
   text-transform: capitalize;
   font-size: 16px;
-  margin-left: 38px;
+  margin-left: 28px;
   color: black;
-  font-weight: 400;
+  font-weight: 200;
 
 }
