--- a/src/App.css
+++ b/src/App.css
@@ -192,6 +192,31 @@ body{
   font-size: 1.5vw;
 }
 
+.cone{
+  width: 100%;
+  height: 50vh;
+}
+
+
+
+.ctwo{
+  width: 100%;
+  height: 100vh;
+}
+
+.ctwo .ako{
+  width: 100%;
+  height: 17vh;
+  background-color: #6A0032;
+}
+
+.ctwo .ako h1{
+  position: absolute;
+  margin-left: 10vw;
+  letter-spacing: 0px;
+  /* word-spacing: 50px; */
+}
+
 
 
 
