--- a/src/App.css
+++ b/src/App.css
@@ -193,11 +193,34 @@ body{
 }
 
 .cone{
+  
   width: 100%;
   height: 50vh;
+  background-color: #e9e9e9;
 }
 
+.cone .kill{
+  position: absolute;
+  width: 100%;
+  height: 17.6vh;
+  background-color: #e9e9e9;
+  bottom: -24.4vw;
+  
+}
 
+.cone h1{
+  position: absolute;
+  margin-top: -4vw;
+ margin-left: 9.5vw;
+ font-weight: 300;
+ color: #6A0032;
+}
+
+.cone img{
+  position: absolute;
+  margin-left: 65vw;
+  margin-top: -6.8vw;
+}
 
 .ctwo{
   width: 100%;
@@ -212,9 +235,12 @@ body{
 
 .ctwo .ako h1{
   position: absolute;
-  margin-left: 10vw;
-  letter-spacing: 0px;
-  /* word-spacing: 50px; */
+  font-weight: 600;
+  color: #f1c232;
+  margin-left: 9vw;
+  letter-spacing: -2px;
+  font-stretch:ultra-condensed;
+  padding-top: 30px;
 }
 
 
