--- a/src/App.css
+++ b/src/App.css
@@ -270,6 +270,7 @@ body{
   margin-left: 65vw;
   padding: 10px;
   padding-right: 3.9vw;
+  cursor: pointer;
   padding-left: 3.2vw;
   align-items: center;
   justify-content: center;
@@ -296,6 +297,34 @@ body{
   letter-spacing: -1.8px;
   font-stretch:ultra-condensed;
   padding-top: 30px;
+}
+
+.ctwo .akos{
+  width: 100%;
+  height: 17vh;
+  background-color: #e9e9e9;
+}
+
+.ctwo .akos h1{
+  position: absolute;
+  font-weight: 700;
+  color: #0a0a0aaf;
+  margin-left: 9vw;
+  letter-spacing: -1.8px;
+  font-stretch:ultra-condensed;
+  padding-top: 30px;
+  font-size: 2vw;
+}
+
+.ctwo .akos .rokis{
+  position: absolute;
+  font-weight: 400;
+  color: #0000008c;
+  margin-left: 25.5vw;
+  letter-spacing: -1.8px;
+  font-stretch:ultra-condensed;
+  padding-top: 30px;
+  font-style: sans-serif;
 }
 
 
