--- a/src/App.css
+++ b/src/App.css
@@ -330,3 +330,49 @@ body{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+.ctwo .akosi{
+  margin-top: 22vw;
+  width: 100%;
+  height: 17vh;
+  background-color: #e9e9e9;
+}
+
+.ctwo .akosi h1{
+  position: absolute;
+  font-weight: 700;
+  color: #0a0a0aaf;
+  margin-left: 9vw;
+  letter-spacing: -1.8px;
+  font-stretch:ultra-condensed;
+  padding-top: 30px;
+  font-size: 2vw;
+}
+
+.ctwo .akosi .rokisi{
+  position: absolute;
+  font-weight: 400;
+  color: #0000008c;
+  margin-left: 23.9vw;
+  letter-spacing: -1.8px;
+  font-stretch:ultra-condensed;
+  padding-top: 30px;
+  font-style: sans-serif;
+}
+
+
+
+
+
+
