--- a/src/App.css
+++ b/src/App.css
@@ -220,9 +220,10 @@ body{
   position: absolute;
  margin-left: 9.5vw;
  font-weight: 300;
- color: #000000;
+ color: #000000e1;
  font-size: 17px;
  line-height: 28px;
+ font-weight: 400;
 }
 
 .cone .killo{
@@ -327,13 +328,19 @@ body{
   font-style: sans-serif;
 }
 
+.ver ul li{
+  line-height: 1px;
+  font-weight: 500;
+  margin-top: 38px;
+  margin-left: 9.5vw;
+  list-style: none;
+  color: #0a0a0ae5;
+}
 
-
-
-
-
-
-
+.ver span{
+  color: #6a0032f3;
+  font-weight: 700;
+}
 
 
 
@@ -343,7 +350,7 @@ body{
 
 
 .ctwo .akosi{
-  margin-top: 22vw;
+  margin-top: 3vw;
   width: 100%;
   height: 17vh;
   background-color: #e9e9e9;
