--- a/src/App.css
+++ b/src/App.css
@@ -371,6 +371,14 @@ body{
   font-style: sans-serif;
 }
 
+.apply{
+  position: absolute;
+  background-color: #6A0032;
+  margin-top: 17vw;
+  width: 100%;
+  height: 53vh;
+}
+
 
 
 
