--- a/src/App.css
+++ b/src/App.css
@@ -384,3 +384,42 @@ body{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.lin{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(148, 146, 146);
+  margin-top: 42.4vw;
+  
+}
+
+
+
+
+
+
