--- a/src/App.css
+++ b/src/App.css
@@ -384,10 +384,21 @@ body{
   text-align: center;
   color: #fff;
   margin: 15px;
-  margin-top: 3vw;
+  margin-top: 2vw;
   margin-left: 8vw;
   font-size: 22px;
   font-weight: 300;
+  line-height: 2.5vw;
+}
+
+.apply .tokio{
+  font-family: 'Great Vibes', cursive;
+  font-style: italic;
+  position: absolute;
+  text-align: center;
+  margin-top: 11vw;
+  margin-left: 12vw;
+  font-weight: 100;
 }
 
 .motion{
