--- a/src/App.css
+++ b/src/App.css
@@ -401,6 +401,25 @@ body{
   font-weight: 100;
 }
 
+.apply .bitin{
+  padding: 10px 18vw 10px 18vw;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  color: #fff;
+  align-items: center;
+  cursor: pointer;
+  justify-content: center;
+  font-weight: 600;
+  position: absolute;
+  margin-left: 6.5vw;
+  top: 16vw;
+  background-color:  #6A0032;
+}
+
+.apply .bitin:hover{
+  background: rgba(255, 255, 255, 0.2);
+}
+
 .motion{
   position: absolute;
   right: 7vw;
