--- a/src/App.css
+++ b/src/App.css
@@ -649,11 +649,227 @@ text-align: center;
 justify-content: center;
 line-height: 40px;
 border-radius: 50%;
-
-  
 }
 
 
+
+@media screen and (min-width: 500px){
+
+
+  .footer{
+    margin-top: 205vw;
+    height: 53vh;
+  }
+  
+  .tio{
+    margin-top: 38px;
+    color: #6A0032;
+    font-family: 'EB Garamond', serif;
+  }
+  
+  .tis{
+    margin-right: 50px;
+    margin-left: 50px;
+    font-size: 85%;
+  }
+  
+  .tik{
+    margin-top: 13px;
+    font-size: 80%;
+  }
+  
+  .social-links a{
+  list-style: none;
+  font-size: 3.5vw;
+  text-decoration: none;
+  border-radius: 50%;
+  color: #fff;
+  
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  background-color: rgba(95,99,104,255);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  justify-content: center;
+  line-height: 40px;
+  border-radius: 50%;
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .lin{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(148, 146, 146);
+    margin-top: 40.5vw;
+  }
+  
+  .lin .pin{
+    position: absolute;
+    background-color:  #e9e9e9;
+    width: 100%;
+    height: 17vh;
+    text-align: center;
+    justify-content: center;
+  }
+  
+  .lin .pin .ney{
+    font-family: 'Dancing Script', cursive;
+    margin-top: 45px;
+    font-size: 23px;
+    font-weight: bold;
+    color:  #0a0a0ad7;
+  }
+  
+  .lin .resource{
+    background-color: #fff;
+    margin-top: 8.2vw;
+    width: 100%;
+    height: 40vh;
+  }
+  
+  .lin .resource .bet{
+    position: absolute;
+    padding: 10px 8vw 10px 8vw;
+    border-radius: 4px;
+    border: 1px solid  #6A0032;
+    color: #6A0032;
+    cursor: pointer;
+    margin-left: 6.5vw;
+    font-weight: 400;
+    font-size: 14px;
+    top: 10vw;
+    background-color:  #fff;
+  }
+  
+  .marke{
+    font-size: 1.6vw;
+    position: absolute;
+    margin-top: 6.2vw;
+    margin-left: 8vw;
+  }
+  
+  .firstly ul li{
+    padding: 3.9px;
+  }
+  
+  .lin .resource .firstly ul li a{
+    font-weight: 600;
+    font-size: 1vw;
+    color: #6A0032;
+    position: absolute;
+    margin-top: 6vw;
+    margin-left: 9vw;
+  }
+  
+  .markes{
+    font-size: 1.7vw;
+    position: absolute;
+    margin-top: -9vw;
+    margin-left: 43vw;
+  }
+  
+  .secondly ul li{
+    padding: 5px;
+  }
+  
+  .lin .resource .secondly ul li a{
+    font-weight: 600;
+    font-size: 1vw;
+    color: #6A0032;
+    position: absolute;
+    margin-left: 44vw;
+    margin-top: -9vw;
+  }
+  
+  .markew{
+    font-size: 1.7vw;
+    position: absolute;
+    margin-top: -21vw;
+    margin-left: 73vw;
+  }
+  
+  .thirdly ul li{
+    padding: 5px;
+  }
+  
+  .redd{
+    color: rgb(192, 9, 9);
+  }
+  
+  .lin .resource .thirdly ul li a{
+    font-weight: 600;
+    font-size: 1vw;
+    color: #6A0032;
+    position: absolute;
+    margin-left: 74vw;
+    margin-top: -21vw;
+  }
+  
+  .lin .inter{
+    margin-top: 46vw;
+  }
+  
+  .tera{
+    padding: 10px 16vw 10px 16vw;
+  }
+  
+  .terao{
+    padding: 2px 10vw 2px 10vw;
+    margin-right: 16px;
+    margin-left: 16px;
+  }
+  
+  .terai{
+    padding: 10px 10.3vw 10px 10.3vw;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    margin-top: 25px;
+    background-color:  #6A0032;
+    color: #fff;
+    font-weight: 300;
+    font-size: 15px;
+  }
+  
+  .terai:hover{
+    background: rgba(255, 255, 255, 0.2);
+  }
+  
+  .teras{
+    padding: 9px 24.6vw 9px 24.6vw;
+    border-radius: 4px;
+    margin-top: 25px;
+    color: #6A0032;
+    border: 1px solid #fff;
+    background-color: #fff;
+    font-weight: 300;
+    font-size: 15px;
+  }
+
+
+
+
+
+
+
+
+
+
+}
 
 
 
