--- a/src/App.css
+++ b/src/App.css
@@ -657,7 +657,7 @@ border-radius: 50%;
 
 
   .footer{
-    margin-top: 205vw;
+    margin-top: 262vw;
     height: 53vh;
   }
   
@@ -714,7 +714,7 @@ border-radius: 50%;
     position: absolute;
     width: 100%;
     height: 100vh;
-    background-color: rgb(148, 146, 146);
+    /* background-color: rgb(148, 146, 146); */
     margin-top: 40.5vw;
   }
   
@@ -739,28 +739,20 @@ border-radius: 50%;
     background-color: #fff;
     margin-top: 8.2vw;
     width: 100%;
-    height: 40vh;
+    height: 84vh;
   }
   
   .lin .resource .bet{
-    position: absolute;
-    padding: 10px 8vw 10px 8vw;
-    border-radius: 4px;
-    border: 1px solid  #6A0032;
-    color: #6A0032;
-    cursor: pointer;
-    margin-left: 6.5vw;
-    font-weight: 400;
-    font-size: 14px;
-    top: 10vw;
-    background-color:  #fff;
+    padding: 10px 15vw 10px 15vw;
+    top: 30vw;
   }
   
   .marke{
-    font-size: 1.6vw;
+    font-size: 4vw;
     position: absolute;
-    margin-top: 6.2vw;
-    margin-left: 8vw;
+    margin-top: 35vw;
+    margin-left: 11vw;
+    line-height: 6vw;
   }
   
   .firstly ul li{
@@ -768,19 +760,20 @@ border-radius: 50%;
   }
   
   .lin .resource .firstly ul li a{
-    font-weight: 600;
-    font-size: 1vw;
+    font-weight: 400;
+    font-size: 3vw;
     color: #6A0032;
     position: absolute;
-    margin-top: 6vw;
-    margin-left: 9vw;
+    margin-top: 35vw;
+    margin-left: 15vw;
   }
   
   .markes{
-    font-size: 1.7vw;
+    font-size: 4vw;
     position: absolute;
-    margin-top: -9vw;
-    margin-left: 43vw;
+    margin-top: 45vw;
+    margin-left: 11vw;
+    line-height: 6.5vw;
   }
   
   .secondly ul li{
@@ -788,36 +781,33 @@ border-radius: 50%;
   }
   
   .lin .resource .secondly ul li a{
-    font-weight: 600;
-    font-size: 1vw;
+    font-weight: 400;
+    font-size: 3vw;
     color: #6A0032;
     position: absolute;
-    margin-left: 44vw;
-    margin-top: -9vw;
+    margin-left: 15vw;
+    margin-top: 45vw;
   }
   
   .markew{
-    font-size: 1.7vw;
+    font-size: 4vw;
     position: absolute;
-    margin-top: -21vw;
-    margin-left: 73vw;
+    margin-top: 55vw;
+    margin-left: 11vw;
+    line-height: 6.5vw;
   }
   
   .thirdly ul li{
     padding: 5px;
   }
   
-  .redd{
-    color: rgb(192, 9, 9);
-  }
   
   .lin .resource .thirdly ul li a{
-    font-weight: 600;
-    font-size: 1vw;
-    color: #6A0032;
+    font-weight: 400;
+    font-size: 3vw;
     position: absolute;
-    margin-left: 74vw;
-    margin-top: -21vw;
+    margin-left: 15vw;
+    margin-top: 55vw;
   }
   
   .lin .inter{
@@ -835,29 +825,13 @@ border-radius: 50%;
   }
   
   .terai{
-    padding: 10px 10.3vw 10px 10.3vw;
-    border-radius: 4px;
-    border: 1px solid #fff;
-    margin-top: 25px;
-    background-color:  #6A0032;
-    color: #fff;
-    font-weight: 300;
-    font-size: 15px;
-  }
-  
-  .terai:hover{
-    background: rgba(255, 255, 255, 0.2);
+    padding: 2px 10vw 2px 10vw;
+    margin-right: 16px;
+    margin-left: 16px;
   }
   
   .teras{
-    padding: 9px 24.6vw 9px 24.6vw;
-    border-radius: 4px;
-    margin-top: 25px;
-    color: #6A0032;
-    border: 1px solid #fff;
-    background-color: #fff;
-    font-weight: 300;
-    font-size: 15px;
+    padding: 9px 36vw 9px 36vw;
   }
 
 
